--- a/example/programs/amm-proxy/Cargo.toml
+++ b/example/programs/amm-proxy/Cargo.toml
@@ -16,6 +16,10 @@ cpi = ["no-entrypoint"]
 default = []
 
 [dependencies]
-anchor-lang = "0.29.0"
-anchor-spl = "0.29.0"
+anchor-lang = "0.30.1"
+anchor-spl = "0.30.1"
 amm-anchor = { path = "../../../amm-anchor", features = ["devnet"] }
+idl-build = [
+    "anchor-lang/idl-build",
+    "anchor-spl/idl-build",
+]
