--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -3,12 +3,16 @@ name = "raydium-contract-instructions"
 version = "0.1.0"
 edition = "2021"
 
-
 [dependencies]
-solana-program = "=1.16.25"
+solana-program = "1.18.2"
 spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
 spl-associated-token-account = { version = "1.1.2", features = [
     "no-entrypoint",
 ] }
 thiserror = "1.0.20"
 ahash = "=0.8.7"
+anchor-lang = "0.30.1"
+anchor-spl = "0.30.1"
+
+[features]
+idl-build = ["anchor-lang/idl-build"]
